rm public folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
             <div id="hr"></div>
-            <img src="public/logo-sead.png" alt="logo" width="64px">
+            <img src="src/assets/logo-sead.png" alt="logo" width="64px">
         </nav>
     </header>
     <div id="banner"></div>
