--- a/index.html
+++ b/index.html
@@ -10,25 +10,30 @@
 <body>
     <header>
         <nav class="navbar">
-            <div id="hr"></div>
-            <img src="src/assets/logo-sead.png" alt="logo" width="64px">
+            <div class="hr hr-1"></div>
+            <img src="src/assets/logo-sead.png" id="logo" alt="logo SEaD" width="72">
         </nav>
     </header>
     <div id="banner"></div>
     <div class="wrapper">
         <main class="content">
             <section class="list-menu">
-                <h2>ESCOLHA UM AVA</h2>
+                <h2>Escolha um <strong>AVA</strong></h2>
                 <div class="btn-group">
-                    <!--<button class="btn btn-1">SEaD (EaD)</button>-->
-                    <button class="btn btn-2">Classes</button>
-                    <button class="btn btn-3">UAB</button>
-                    <button class="btn btn-4">PEX</button>
-                    <!--<button class="btn btn-5">Projetos</button>-->
-                    <a href="">Voltar</a>
+                    <a href="https://www.classes.sead.ufpb.br/login/index.php" class="btn btn-1">Classes</a>
+                    <a href="https://www.uab.sead.ufpb.br/login/index.php" class="btn btn-2">PEX</a>
+                    <a href="https://pex.sead.ufpb.br/login/index.php" class="btn btn-3">UAB</a>
+                    <a href="http://www.sead.ufpb.br/" id="voltar">Voltar</a>
                 </div>
             </section>
         </main>
     </div>
+    <footer>
+        <div class="hr hr-2"></div>
+        <div class="rodapé">
+            <!--<img src="src/assets/logo-sead.png" alt="" width="48px">-->
+            <p>Superintendência de Educação a Distância (SEAD) - UFPB | +55 (083) 3216-7257</p>
+        </div>
+    </footer>
 </body>
 </html>
