--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <section class="list-menu">
                 <h2>Escolha um <strong>AVA</strong></h2>
                 <div class="btn-group">
-                    <a href="https://www.classes.sead.ufpb.br/login/index.php" class="btn btn-1">Classes</a>
-                    <a href="https://www.uab.sead.ufpb.br/login/index.php" class="btn btn-2">PEX</a>
-                    <a href="https://pex.sead.ufpb.br/login/index.php" class="btn btn-3">UAB</a>
+                    <a href="https://www.classes.sead.ufpb.br/login/index.php" class="btn btn-1" target="_blank">Classes</a>
+                    <a href="https://pex.sead.ufpb.br/login/index.php" class="btn btn-2" target="_blank">PEX</a>
+                    <a href="https://www.uab.sead.ufpb.br/login/index.php" class="btn btn-3" target="_blank">UAB</a>
                     <a href="http://www.sead.ufpb.br/" id="voltar">Voltar</a>
                 </div>
             </section>
