--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
             <section class="list-menu">
                 <h2>Escolha um <strong>AVA</strong></h2>
                 <div class="btn-group">
-                    <a href="https://www.classes.sead.ufpb.br/login/index.php" class="btn btn-1" target="_blank">Classes</a>
-                    <a href="https://pex.sead.ufpb.br/login/index.php" class="btn btn-2" target="_blank">PEX</a>
-                    <a href="https://www.uab.sead.ufpb.br/login/index.php" class="btn btn-3" target="_blank">UAB</a>
+                    <a href="http://ceap.maisinterativo.com.br/login/index.php" class="btn btn-1" target="_blank">Ceap</a>
+                    <a href="https://www.cecampe.ufpb.br/" class="btn btn-2" target="_blank">Cecamp</a>
+                    <a href="https://www.classes.sead.ufpb.br/login/index.php" class="btn btn-3" target="_blank">Classes</a>
+                    <a href="https://pex.sead.ufpb.br/login/index.php" class="btn btn-4" target="_blank">PEX</a>
+                    <a href="https://ead.progep.ufpb.br/login/index.php" class="btn btn-5" target="_blank">Progep</a>
+                    <a href="https://www.uab.sead.ufpb.br/login/index.php" class="btn btn-6" target="_blank">UAB</a>
                     <a href="http://www.sead.ufpb.br/" id="voltar">Voltar</a>
                 </div>
             </section>
