--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar">
             <div class="hr hr-1"></div>
-            <img src="src/assets/logo-sead.png" id="logo" alt="logo SEaD" width="72">
+            <img src="src/assets/logo-sead.png" id="logo" alt="logo SEaD" width="70">
         </nav>
     </header>
     <div id="banner"></div>
@@ -20,12 +20,13 @@
             <section class="list-menu">
                 <h2>Escolha um <strong>AVA</strong></h2>
                 <div class="btn-group">
-                    <a href="http://ceap.maisinterativo.com.br/login/index.php" class="btn btn-1" target="_blank">Ceap</a>
-                    <a href="https://www.cecampe.ufpb.br/" class="btn btn-2" target="_blank">Cecamp</a>
-                    <a href="https://www.classes.sead.ufpb.br/login/index.php" class="btn btn-3" target="_blank">Classes</a>
-                    <a href="https://pex.sead.ufpb.br/login/index.php" class="btn btn-4" target="_blank">PEX</a>
-                    <a href="https://ead.progep.ufpb.br/login/index.php" class="btn btn-5" target="_blank">Progep</a>
-                    <a href="https://www.uab.sead.ufpb.br/login/index.php" class="btn btn-6" target="_blank">UAB</a>
+                    <a href="https://pex.sead.ufpb.br/login/index.php" class="btn btn-pex" target="_blank">PEX</a>
+                    <a href="http://ceap.maisinterativo.com.br/login/index.php" class="btn btn-ceap" target="_blank">Ceap</a>
+                    <a href="https://www.cecampe.ufpb.br/" class="btn btn-cecamp" target="_blank">Cecamp</a>
+                    <a href="https://www.uab.sead.ufpb.br/login/index.php" class="btn btn-uab" target="_blank">UAB</a>
+                    <a href="https://ead.progep.ufpb.br/login/index.php" class="btn btn-progep" target="_blank">Progep</a>
+                    <a href="https://www.classes.sead.ufpb.br/login/index.php" class="btn btn-classes" target="_blank">Classes</a>
+                    <a href="http://www.cofen.gov.br/" class="btn btn-cofen" target="_blank">Cofen</a>
                     <a href="http://www.sead.ufpb.br/" id="voltar">Voltar</a>
                 </div>
             </section>
@@ -39,3 +40,4 @@
     </footer>
 </body>
 </html>
+
