--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <section class="list-menu">
                 <h2>Escolha um <strong>AVA</strong></h2>
                 <div class="btn-group">
+                    <a href="https://uab.sead.ufpb.br/login/index.php" class="btn btn-uab" target="_blank">UAB</a>
+                    <a href="https://classes.sead.ufpb.br/login/index.php" class="btn btn-classes" target="_blank">Classes</a>
                     <a href="https://pex.sead.ufpb.br/login/index.php" class="btn btn-pex" target="_blank">PEX</a>
-                    <a href="http://ceap.maisinterativo.com.br/login/index.php" class="btn btn-ceap" target="_blank">Ceap</a>
-                    <a href="https://www.cecampe.ufpb.br/" class="btn btn-cecamp" target="_blank">Cecamp</a>
-                    <a href="https://www.uab.sead.ufpb.br/login/index.php" class="btn btn-uab" target="_blank">UAB</a>
+                    <a href="https://cofen.sead.ufpb.br/" class="btn btn-cofen" target="_blank">Cofen</a>
+                    <a href="https://cecampenordeste.sead.ufpb.br/login/index.php" class="btn btn-cecampe" target="_blank">Cecampe</a>
                     <a href="https://ead.progep.ufpb.br/login/index.php" class="btn btn-progep" target="_blank">Progep</a>
-                    <a href="https://www.classes.sead.ufpb.br/login/index.php" class="btn btn-classes" target="_blank">Classes</a>
-                    <a href="http://www.cofen.gov.br/" class="btn btn-cofen" target="_blank">Cofen</a>
+                    <a href="https://eadseap.sead.ufpb.br/login/index.php" class="btn btn-seap" target="_blank">Seap</a>
                     <a href="http://www.sead.ufpb.br/" id="voltar">Voltar</a>
                 </div>
             </section>
